log
Fri, Apr 18, 2025  9:54:09 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  9:54:37 PM: 
 tests:  0|6
total_score: 0/70
645aac5
Fri, Apr 18, 2025  9:59:47 PM: 
 hashmap.c | 68 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 64 insertions(+), 4 deletions(-)
 tests:  16|1
total_score: 60/70
190b340
Sun, Apr 20, 2025  4:15:52 PM: 
 tests:  16|1
total_score: 60/70
b642400
Sun, Apr 20, 2025  5:14:16 PM: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:10: error: unused variable 'capacidadAnterior' [-Werror=unused-variable]
     long capacidadAnterior = map->capacity; //la anterior capacidad
          ^~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
d6b13eb
Sun, Apr 20, 2025  5:15:55 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
35f4a96
Sun, Apr 20, 2025  5:37:07 PM: 
 hashmap.c | 23 +++++++++++++----------
 1 file changed, 13 insertions(+), 10 deletions(-)
 tests:  17|0
total_score: 70/70
63c7115
